fix: solve critical P0 issues (JWT refresh, Firebase redirect, docs cleanup, build fixes)