@@ -51,6 +51,418 @@
 
 ---
 
+### 3. Backend Compilation Errors - 100+ Type Safety Errors [CRITICAL] ⚠️ FIXED
+**Location:** `src/main/java/com/supremeai/` (multiple files)  
+**Severity:** CRITICAL  
+**Status:** FIXED  
+**Description:** Main backend code failed to compile due to unchecked type casts and generic type mismatches
+
+**Evidence:**
+- `EnhancedLearningController.java:93`: `(Map<String, Object>) payload.getOrDefault(...)` - unchecked cast
+- `APIKeyController.java:215`: `(List<String>) body.get("keyIds")` - unchecked cast
+- `AppGenerationController.java:239`: `(Map<String, String>) result.get("files")` - unchecked cast
+- 100+ similar errors across multiple controllers
+
+**Fix Applied:**
+- ✅ Added `Map.<String, Object>of()` instead of `Map.of()` for typed empty maps
+- ✅ Added `@SuppressWarnings("unchecked")` with justification for necessary casts
+- ✅ Fixed all `Map.of()` calls in `EnhancedLearningController.java`
+- ✅ Fixed all `Map.of()` calls in `EnhancedLearningService.java`
+- ✅ Added `@SuppressWarnings("unchecked")` to `APIKeyController.java` bulk operations
+- ✅ Added `@SuppressWarnings("unchecked")` to `AppGenerationController.java` cast
+
+---
+
+### 4. Test Compilation Failures - CodeAnalyzer Missing parse() Method [CRITICAL] ⚠️ FIXED
+**Location:** `src/main/java/com/supremeai/codeflow/analyzer/CodeAnalyzer.java`  
+**Severity:** CRITICAL  
+**Status:** FIXED  
+**Description:** CodeAnalyzer class missing public `parse(String, String)` method that tests expect
+
+**Evidence:**
+- `CodeAnalyzerTest.java:82`: `codeAnalyzer.parse(JAVA_CODE, "java")` - method not found
+- Only has `parseRepository(String)` method, no snippet parser
+- Tests expect `ParseResult` with language, functions, classes, imports
+
+**Fix Applied:**
+- ✅ Added public `ParseResult` inner class with language, functions, classes, imports fields
+- ✅ Added public `parse(String code, String language)` method to CodeAnalyzer
+- ✅ Added public `parse(String code)` convenience method
+- ✅ Added `ParsedClass` and `ParsedFunction` inner classes for test compatibility
+- ✅ Added `TreeSitterParseResult` private inner class
+- ✅ Made all fields public for direct test access (matching test expectations)
+- ✅ Added `extractModifiers()` method to populate function modifiers list
+- ✅ Added `ObjectMapper` import for JSON serialization
+
+---
+
+### 5. Test Syntax Errors - Invalid Text Block Nesting [HIGH] ⚠️ FIXED
+**Location:** `src/test/java/com/supremeai/codeflow/analyzer/CodeAnalyzerTest.java`  
+**Severity:** HIGH  
+**Status:** FIXED  
+**Description:** Java text blocks containing `"""` are not properly escaped
+
+**Evidence:**
+- Line 688: `String json = """` inside text block - invalid nesting
+- Line 844: `STR."Name: \{name}"` inside text block - invalid
+- Java doesn't allow unescaped `"""` inside text blocks
+
+**Fix Applied:**
+- ✅ Escaped inner `"""` as `\"\"\"` in test code strings (lines 688, 693)
+- ✅ Escaped string template syntax properly (line 844)
+- ✅ Fixed all nested text block usages in test file
+- ✅ Fixed duplicate `parse(String)` method in CodeAnalyzer
+- ✅ Fixed duplicate `ParsedClass`/`ParsedFunction` classes
+
+---
+
+### 6. Build Configuration - Missing --enable-preview for Test Compilation [MEDIUM] ⚠️ FIXED
+**Location:** `build.gradle.kts`  
+**Severity:** MEDIUM  
+**Status:** FIXED  
+**Description:** Test compilation doesn't enable Java preview features needed for text blocks
+
+**Evidence:**
+- `compileJava` has `--enable-preview` flag
+- `compileTestJava` doesn't have the flag
+- Tests use text blocks (Java 21 preview feature)
+
+**Fix Applied:**
+- ✅ Added `--enable-preview` to `compileTestJava` task
+- ✅ Ensured test JVM args include `--enable-preview`
+
+---
+
+### 7. Model Class Field Visibility - Private Fields Block Test Access [HIGH] ⚠️ FIXED
+**Location:** `src/main/java/com/supremeai/codeflow/model/CodeRepository.java`  
+**Severity:** HIGH  
+**Status:** FIXED  
+**Description:** Model class fields are private, tests access them directly
+
+**Evidence:**
+- Tests access `result.language`, `result.functions`, `c.name`, `f.name` directly
+- Lombok `@Data` generates getters but fields remain private
+- Direct field access fails compilation
+
+**Fix Applied:**
+- ✅ Made `FunctionInfo` fields public (name, line, endLine, parameters, returnType, complexity, etc.)
+- ✅ Made `ClassInfo` fields public (name, line, type, extendsClasses, methods, etc.)
+- ✅ Made `ImportInfo` fields public (module, alias, isUsed, line)
+- ✅ Made `ParseResult` fields public (language, functions, classes, imports)
+- ✅ Made `ParsedClass` fields public (name, line, type, methods)
+- ✅ Made `ParsedFunction` fields public (name, line, parameters, returnType)
+- ✅ Added `modifiers` field to `FunctionInfo` for test compatibility
+
+---
+
+### 8. Test Type Mismatch - ParsedClass vs ClassInfo [MEDIUM] ⚠️ FIXED
+**Location:** `src/test/java/com/supremeai/codeflow/analyzer/CodeAnalyzerTest.java`  
+**Severity:** MEDIUM  
+**Status:** FIXED  
+**Description:** Tests expect `ParsedClass` but receive `ClassInfo` from parser
+
+**Evidence:**
+- `CodeAnalyzerTest.java:95`: `CodeAnalyzer.ParsedClass userService = result.classes.stream()`
+- `result.classes` is `List<ClassInfo>`, not `List<ParsedClass>`
+- Type mismatch causes compilation error
+
+**Fix Applied:**
+- ✅ Changed test to use `CodeRepository.ClassInfo` instead of `CodeAnalyzer.ParsedClass`
+- ✅ Added import for `com.supremeai.codeflow.model.CodeRepository`
+- ✅ Updated all test references from `CodeAnalyzer.ParsedClass` to `CodeRepository.ClassInfo`
+
+## 📋 MEDIUM PRIORITY ISSUES
+
+### 9. VS Code Extension Missing Source Files
+**Location:** `supremeai-vscode-extension/`  
+**Severity:** MEDIUM  
+**Description:** Package.json references source files that may not exist
+
+**Evidence:**
+- `package.json:112`: `"compile": "tsc -p ./"`
+- `package.json:30`: `"main": "./out/extension.js"`
+- Need to verify all TypeScript files compile
+- Missing `tsconfig.json` validation
+
+**Fix Required:**
+- Run `npm run compile` to verify build
+- Check for missing type definitions
+- Verify all imports resolve correctly
+
+---
+
+### 10. Hardcoded URLs in Configuration
+**Location:** Multiple files  
+**Severity:** MEDIUM  
+**Description:** URLs hardcoded instead of using environment variables
+
+**Evidence:**
+- `functions/index.js:67`: Hardcoded backend URL fallback
+- `dashboard/src/lib/firebase.ts:14-22`: Firebase config from env but no emulator config
+- `supremeai-vscode-extension/package.json:59`: Hardcoded backend URL
+- `command-hub/cli/supcmd.py:7`: Hardcoded API URL
+
+**Fix Required:**
+- Move all URLs to environment variables
+- Use config files for environment-specific settings
+- Add `.env.example` files with all required variables
+
+---
+
+### 11. Missing Error Boundaries in React App
+**Location:** `dashboard/src/App.tsx`  
+**Severity:** MEDIUM  
+**Description:** No error boundaries to catch component errors
+
+**Evidence:**
+- Lazy-loaded components (lines 15-35) may fail to load
+- No error boundary wrapping routes
+- Network errors in components not handled
+
+**Fix Required:**
+- Add React Error Boundary component
+- Wrap lazy-loaded components with error boundaries
+- Add fallback UI for component errors
+- Log errors to monitoring service
+
+---
+
+### 12. Inconsistent API Response Formats
+**Location:** Backend controllers  
+**Severity:** MEDIUM  
+**Description:** Different controllers return different response formats
+
+**Evidence:**
+- Some return `ResponseEntity<Map<String, Object>>`
+- Others return `ResponseEntity<?>`
+- Error responses inconsistent
+- Success responses vary
+
+**Fix Required:**
+- Create standardized API response wrapper class
+- Use consistent error response format
+- Document all API responses
+- Add API versioning
+
+---
+
+### 13. Missing Input Validation in Some Endpoints
+**Location:** Various controllers  
+**Severity:** MEDIUM  
+**Description:** Not all endpoints have proper validation
+
+**Evidence:**
+- `AuthenticationController` has some validation
+- But other controllers may not validate all inputs
+- `@Valid` not consistently applied
+
+**Fix Required:**
+- Add `@Valid` to all controller method parameters
+- Create DTOs for all request types
+- Add comprehensive validation annotations
+- Test validation with invalid inputs
+
+---
+
+### 14. Firebase Functions Cold Start Issues
+**Location:** `functions/package.json`  
+**Severity:** MEDIUM  
+**Description:** Node 20 runtime may have cold start delays
+
+**Evidence:**
+- Line 12: `"node": "20"`
+- No minInstances configured
+- Functions may timeout on cold start
+
+**Fix Required:**
+- Consider Node 20+ with better cold start
+- Configure minInstances for critical functions
+- Add timeout buffer
+- Implement warming strategy
+
+---
+
+### 3. Backend Compilation Errors - 100+ Type Safety Errors [CRITICAL]
+**Location:** `src/main/java/com/supremeai/` (multiple files)  
+**Severity:** CRITICAL  
+**Description:** Main backend code fails to compile due to unchecked type casts and generic type mismatches
+
+**Evidence:**
+- `EnhancedLearningController.java:93`: `(Map<String, Object>) payload.getOrDefault(...)` - unchecked cast
+- `APIKeyController.java:215`: `(List<String>) body.get("keyIds")` - unchecked cast
+- `AppGenerationController.java:239`: `(Map<String, String>) result.get("files")` - unchecked cast
+- 100+ similar errors across multiple controllers
+
+**Fix Required:**
+- Add proper generic type parameters to Map/List creation
+- Use `Map.<String, Object>of()` instead of `Map.of()`
+- Add `@SuppressWarnings("unchecked")` with justification where needed
+- Refactor to use proper DTOs instead of raw Maps
+
+---
+
+### 4. Test Compilation Failures - CodeAnalyzer Missing parse() Method [CRITICAL]
+**Location:** `src/main/java/com/supremeai/codeflow/analyzer/CodeAnalyzer.java`  
+**Severity:** CRITICAL  
+**Description:** CodeAnalyzer class missing public `parse(String, String)` method that tests expect
+
+**Evidence:**
+- `CodeAnalyzerTest.java:82`: `codeAnalyzer.parse(JAVA_CODE, "java")` - method not found
+- Only has `parseRepository(String)` method, no snippet parser
+- Tests expect `ParseResult` with language, functions, classes, imports
+
+**Fix Required:**
+- Add public `parse(String code, String language)` method to CodeAnalyzer
+- Add `ParseResult` inner class with language, functions, classes, imports fields
+- Add `ParsedClass` inner class for test compatibility
+- Fix text block syntax in tests (nested `"""` needs escaping)
+
+---
+
+### 5. Test Syntax Errors - Invalid Text Block Nesting [HIGH]
+**Location:** `src/test/java/com/supremeai/codeflow/analyzer/CodeAnalyzerTest.java`  
+**Severity:** HIGH  
+**Description:** Java text blocks containing `"""` are not properly escaped
+
+**Evidence:**
+- Line 688: `String json = """` inside text block - invalid nesting
+- Line 844: `STR."Name: \{name}"` inside text block - invalid
+- Java doesn't allow unescaped `"""` inside text blocks
+
+**Fix Required:**
+- Escape inner `"""` as `\"\"\"` in test code strings
+- Escape string template syntax properly
+- Fix all nested text block usages in test file
+
+---
+
+### 6. Build Configuration - Missing --enable-preview for Test Compilation [MEDIUM]
+**Location:** `build.gradle.kts`  
+**Severity:** MEDIUM  
+**Description:** Test compilation doesn't enable Java preview features needed for text blocks
+
+**Evidence:**
+- `compileJava` has `--enable-preview` flag
+- `compileTestJava` doesn't have the flag
+- Tests use text blocks (Java 21 preview feature)
+
+**Fix Required:**
+- Add `--enable-preview` to `compileTestJava` task
+- Ensure test JVM args include `--enable-preview`
+
+---
+
+## 📋 MEDIUM PRIORITY ISSUES
+
+### 7. VS Code Extension Missing Source Files
+**Location:** `supremeai-vscode-extension/`  
+**Severity:** MEDIUM  
+**Description:** Package.json references source files that may not exist
+
+**Evidence:**
+- `package.json:112`: `"compile": "tsc -p ./"`
+- `package.json:30`: `"main": "./out/extension.js"`
+- Need to verify all TypeScript files compile
+- Missing `tsconfig.json` validation
+
+**Fix Required:**
+- Run `npm run compile` to verify build
+- Check for missing type definitions
+- Verify all imports resolve correctly
+
+---
+
+### 8. Hardcoded URLs in Configuration
+**Location:** Multiple files  
+**Severity:** MEDIUM  
+**Description:** URLs hardcoded instead of using environment variables
+
+**Evidence:**
+- `functions/index.js:67`: Hardcoded backend URL fallback
+- `dashboard/src/lib/firebase.ts:14-22`: Firebase config from env but no emulator config
+- `supremeai-vscode-extension/package.json:59`: Hardcoded backend URL
+- `command-hub/cli/supcmd.py:7`: Hardcoded API URL
+
+**Fix Required:**
+- Move all URLs to environment variables
+- Use config files for environment-specific settings
+- Add `.env.example` files with all required variables
+
+---
+
+### 9. Missing Error Boundaries in React App
+**Location:** `dashboard/src/App.tsx`  
+**Severity:** MEDIUM  
+**Description:** No error boundaries to catch component errors
+
+**Evidence:**
+- Lazy-loaded components (lines 15-35) may fail to load
+- No error boundary wrapping routes
+- Network errors in components not handled
+
+**Fix Required:**
+- Add React Error Boundary component
+- Wrap lazy-loaded components with error boundaries
+- Add fallback UI for component errors
+- Log errors to monitoring service
+
+---
+
+### 10. Inconsistent API Response Formats
+**Location:** Backend controllers  
+**Severity:** MEDIUM  
+**Description:** Different controllers return different response formats
+
+**Evidence:**
+- Some return `ResponseEntity<Map<String, Object>>`
+- Others return `ResponseEntity<?>`
+- Error responses inconsistent
+- Success responses vary
+
+**Fix Required:**
+- Create standardized API response wrapper class
+- Use consistent error response format
+- Document all API responses
+- Add API versioning
+
+---
+
+### 11. Missing Input Validation in Some Endpoints
+**Location:** Various controllers  
+**Severity:** MEDIUM  
+**Description:** Not all endpoints have proper validation
+
+**Evidence:**
+- `AuthenticationController` has some validation
+- But other controllers may not validate all inputs
+- `@Valid` not consistently applied
+
+**Fix Required:**
+- Add `@Valid` to all controller method parameters
+- Create DTOs for all request types
+- Add comprehensive validation annotations
+- Test validation with invalid inputs
+
+---
+
+### 12. Firebase Functions Cold Start Issues
+**Location:** `functions/package.json`  
+**Severity:** MEDIUM  
+**Description:** Node 20 runtime may have cold start delays
+
+**Evidence:**
+- Line 12: `"node": "20"`
+- No minInstances configured
+- Functions may timeout on cold start
+
+**Fix Required:**
+- Consider Node 20+ with better cold start
+- Configure minInstances for critical functions
+- Add timeout buffer
+- Implement warming strategy
+
+---
+
 ### 3. Missing Firebase Emulator Configuration in React Dashboard
 **Location:** `dashboard/src/lib/firebase.ts`  
 **Severity:** HIGH  
@@ -454,3 +866,204 @@ import com.supremeai.repository.*;  // Wildcard import
 - Recommend implementing CI/CD with automated testing
 - Consider code review process for future changes
 - Architecture review recommended for long-term maintainability
+
+# 🛠️ SupremeAI Repo Structural Improvement Plan (Added: 2026-05-06)
+
+## Overview of New Issues Identified (2026-05-06 Comparison)
+| # | Issue | Severity | Status |
+|---|-------|----------|--------|
+| 1 | Bloated repo size (2.1GB total, 1.1GB without `node_modules`) due to committed dependencies | P0 | Pending |
+| 2 | Excess markdown files (110 total, many non-essential fluff docs) | P0 | Pending |
+| 3 | Single large initial commit with no structured history | P0 | Pending |
+| 4 | 0 GitHub issues (no tracking, no community engagement) | P1 | Pending |
+| 5 | Committed build artifacts (`node_modules/`, `out/`, `build/`) | P0 | Pending |
+| 6 | 20+ duplicate shell/batch scripts | P1 | Pending |
+| 7 | No commit convention or PR process | P0 | Pending |
+| 8 | Poor community metrics (0 stars, forks, watchers) | P2 | Pending |
+
+---
+
+## Phased Improvement Plan
+
+### Phase 1: Repo Cleanup (Week 1: May 6 - May 12, 2026) [Priority: P0]
+#### Task 1: Add proper `.gitignore` to exclude build artifacts
+- **Status**: Pending
+- **Details**: Create/modify root `.gitignore` to prevent future commits of dependencies and build outputs
+- **Subtasks**:
+  - [ ] Add `node_modules/` to root `.gitignore`
+  - [ ] Add `out/` (VS Code extension build)
+  - [ ] Add `build/` (Java/Flutter builds)
+  - [ ] Add `.dart_tool/` (Flutter)
+  - [ ] Add `.env` and `.env.*` (environment variables)
+  - [ ] Verify no future commits include excluded files
+
+#### Task 2: Remove committed `node_modules` and build artifacts from git history
+- **Status**: Pending
+- **Details**: Use `git filter-repo` to permanently remove large directories from git history
+- **Subtasks**:
+  - [ ] Backup repo before making changes
+  - [ ] Run `git filter-repo --path node_modules/ --invert-paths`
+  - [ ] Run `git filter-repo --path out/ --invert-paths`
+  - [ ] Force push cleaned history (warn team first if any collaborators exist)
+  - [ ] Verify repo size reduced to <200MB
+
+#### Task 3: Reduce markdown documentation to 5 core files
+- **Status**: Pending
+- **Details**: Keep only essential docs, delete fluff/duplicate markdown files
+- **Subtasks**:
+  - [ ] Keep only: `README.md`, `ARCHITECTURE.md`, `CONTRIBUTING.md`, `AGENTS.md`, `CODEFLOW_MODULE_README.md`
+  - [ ] Delete non-essential docs: "Evolution to Solo Master", "Universal Expansion", etc.
+  - [ ] Merge related CodeFlow docs into single `CODEFLOW_MODULE_README.md`
+  - [ ] Move necessary reference docs to `.github/` or `docs/` directory
+
+#### Task 4: Merge duplicate shell/batch scripts
+- **Status**: Pending
+- **Details**: 20+ scripts with many cross-platform duplicates
+- **Subtasks**:
+  - [ ] Audit all `.sh`/`.bat` scripts in root and subdirectories
+  - [ ] Merge duplicate functionality into single cross-platform scripts
+  - [ ] Delete redundant scripts (e.g., keep `build.sh` and remove `build.bat` if functionality is identical)
+
+---
+
+### Phase 2: Commit & Code Hygiene (Week 2: May 13 - May 19, 2026) [Priority: P0]
+#### Task 5: Restructure commit history into small, focused commits
+- **Status**: Pending
+- **Details**: Break the single "initial" commit into logical, small commits with proper prefixes
+- **Subtasks**:
+  - [ ] Create new branch `refactor/commit-structure`
+  - [ ] Stage changes in logical groups (backend, frontend, docs, config)
+  - [ ] Use commit prefixes: `feat:`, `fix:`, `docs:`, `chore:`, `Cleanup:`
+  - [ ] Example commits: `feat: add Spring Boot backend scaffold`, `feat: add React dashboard with i18n`
+  - [ ] Verify all tests pass after restructuring
+
+#### Task 6: Set up commit convention and PR process
+- **Status**: Pending
+- **Details**: Enforce commit standards and require code review for changes
+- **Subtasks**:
+  - [ ] Add `commitlint` config to enforce commit message prefixes
+  - [ ] Verify existing PR template (`.github/pull_request_template.md`) is adequate
+  - [ ] Disable direct pushes to `main` branch
+  - [ ] Require PR reviews before merge (even for single contributor, to simulate process)
+
+#### Task 7: Verify and fix test coverage (JaCoCo 10% minimum)
+- **Status**: Pending
+- **Details**: Ensure minimum test coverage is met and build fails if coverage drops
+- **Subtasks**:
+  - [ ] Run `./gradlew test jacocoTestReport`
+  - [ ] Fix all failing tests
+  - [ ] Add missing tests to reach 10% line coverage
+  - [ ] Add JaCoCo coverage check to `build.gradle.kts`
+
+---
+
+### Phase 3: Core Feature Fixes (Week 3-4: May 20 - Jun 2, 2026) [Priority: P1]
+#### Task 8: Fix JWT "Forbidden" error (token expiry handling)
+- **Status**: Pending
+- **Details**: Existing critical issue, fix token refresh and validation logic
+- **Subtasks**:
+  - [ ] Add token expiry check in backend `JwtUtil`
+  - [ ] Implement refresh token flow in `AuthenticationController`
+  - [ ] Fix frontend token storage and refresh logic in `dashboard/src/lib/auth.ts`
+  - [ ] Test authentication flow end-to-end
+
+#### Task 9: Fix AI provider "Missing Key" errors
+- **Status**: Pending
+- **Details**: Auto-detect missing API keys and prompt user in UI
+- **Subtasks**:
+  - [ ] Add API key validation in `AIService` backend
+  - [ ] Show clear error messages in dashboard when keys are missing
+  - [ ] Add "Configure API Keys" link in dashboard settings
+  - [ ] Test all 11 AI provider connectors with missing keys
+
+#### Task 10: Connect dashboard to real backend APIs (remove static data)
+- **Status**: Pending
+- **Details**: Replace mock/static data with live API calls
+- **Subtasks**:
+  - [ ] Audit all dashboard components using static data
+  - [ ] Add API service calls in `dashboard/src/services/`
+  - [ ] Test all endpoints with backend running locally
+  - [ ] Remove all mock data files
+
+#### Task 11: Complete or remove VS Code extension
+- **Status**: Pending
+- **Details**: Extension is only scaffold, decide to complete or delete
+- **Subtasks**:
+  - [ ] Evaluate: complete core features or remove entirely
+  - [ ] If complete: implement code analysis, AI chat, and Firebase integration
+  - [ ] If remove: delete `supremeai-vscode-extension/` directory and update docs
+
+---
+
+### Phase 4: CodeFlow Module Enhancement (Week 5-6: Jun 3 - Jun 16, 2026) [Priority: P1]
+#### Task 12: Highlight CodeFlow as core feature
+- **Status**: Pending
+- **Details**: CodeFlow is the only production-ready feature, make it prominent
+- **Subtasks**:
+  - [ ] Update `README.md` to feature CodeFlow first
+  - [ ] Add CodeFlow demo section to React dashboard
+  - [ ] Create standalone CodeFlow documentation with usage examples
+  - [ ] Add CodeFlow badge to repo (e.g., "CodeFlow: 95% Security Detection")
+
+#### Task 13: Add more language support to CodeFlow
+- **Status**: Pending
+- **Details**: Currently supports Java, add Python, JS, Go, Dart
+- **Subtasks**:
+  - [ ] Add TreeSitter parsers for new languages
+  - [ ] Update `CodeAnalyzer.java` to handle new languages
+  - [ ] Add test cases for each new language
+  - [ ] Update CodeFlow dashboard to show language support
+
+#### Task 14: Integrate CodeFlow with GitHub PRs
+- **Status**: Pending
+- **Details**: Analyze PR diffs and post automated review comments
+- **Subtasks**:
+  - [ ] Add GitHub API integration via Octokit
+  - [ ] Implement PR diff analysis flow
+  - [ ] Test with sample PRs from a test repo
+  - [ ] Add "Analyze PR" button to CodeFlow dashboard
+
+---
+
+### Phase 5: Community & Engagement (Ongoing) [Priority: P2]
+#### Task 15: Set up GitHub issues for tracking
+- **Status**: Pending
+- **Details**: Migrate all existing todo items to GitHub issues
+- **Subtasks**:
+  - [ ] Create GitHub issues for all 20+ items in this todo list
+  - [ ] Add labels (critical, high, medium, low, enhancement)
+  - [ ] Assign milestones to each phase
+  - [ ] Close issues as they are resolved
+
+#### Task 16: Community outreach
+- **Status**: Pending
+- **Details**: Get first users and feedback
+- **Subtasks**:
+  - [ ] Post on Reddit (r/MachineLearning, r/Flutter, r/Spring Boot)
+  - [ ] Write blog post about CodeFlow module ("Analyze repos in 30s")
+  - [ ] Create demo video (30s CodeFlow analysis of a sample repo)
+  - [ ] Apply to local incubators or Y Combinator if ready
+
+#### Task 17: Fix all existing medium/low priority issues
+- **Status**: Pending
+- **Details**: Resolve N+1 queries, hardcoded URLs, error boundaries, etc.
+- **Subtasks**:
+  - [ ] Fix N+1 query issues (existing issue #6)
+  - [ ] Replace hardcoded URLs with environment variables (existing issue #8)
+  - [ ] Add React error boundaries (existing issue #9)
+  - [ ] Standardize API responses (existing issue #10)
+  - [ ] Add input validation to all endpoints (existing issue #11)
+
+---
+
+## Progress Tracking
+- [ ] Phase 1: Repo Cleanup (P0)
+- [ ] Phase 2: Commit & Code Hygiene (P0)
+- [ ] Phase 3: Core Feature Fixes (P1)
+- [ ] Phase 4: CodeFlow Enhancement (P1)
+- [ ] Phase 5: Community & Engagement (P2)
+
+## Next Steps
+1. Start with Phase 1, Task 1 (add `.gitignore`)
+2. Commit changes with proper prefixes
+3. Update this todo list as tasks are completed
